--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.4"
 psycopg2-binary = "^2.9.10"
 python-dotenv = "^1.0.1"
+ipython = "^8.31.0"
 
 
 [tool.poetry.group.link.dependencies]
