--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 ipython = "^8.31.0"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
 pillow = "^11.1.0"
+redis = "^5.2.1"
 
 
 [tool.poetry.group.link.dependencies]
